Add file reset_css.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./stylesheet.css">
+        <link rel="stylesheet" href="./css/stylesheet.css">
+        <link rel="stylesheet" href="css/reset_css.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -25,6 +26,6 @@
 
 
         
-        <script src="./scripts.js" async defer></script>
+        <script src="./js/scripts.js" async defer></script>
     </body>
 </html>
