--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
 
         <div class="menu">
             <div>
-                Ewidencja pracy
+                <h1>Ewidencja pracy</h1>
             </div>
             <div>
-                Button
+                <h2>Button</h2>
             </div>
-        
         </div>
 
 
