Add menu close and open js code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <p class="browsehapppy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="menu">
-            <button class="close">X</button>
+            <div class="menu__container">
+            <div class="closeButton"><button class="close">X</button></div>
             <h1>Menu</h1>
             <nav>
             <ul>
@@ -37,6 +38,7 @@
                 <li><a href="/">Statystyka centrali</a></li>
             </ul>
             </nav>
+            </div>
         </div>
 
         <div class="navbar">
@@ -58,6 +60,6 @@
     
 
         
-        <script src="./js/scripts.js" async defer></script>
+        <script type="module" src="./js/scripts.js" async defer></script>
     </body>
 </html>
