--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <nav>
             <ul>
                 <li><a href="/">Dodawanie sprawy</a></li>
+                <li><a href="/">Dodawanie sprawy</a></li>
                 <li><a href="/">Moja statystyka</a></li>
                 <li><a href="/">Kiosk profilaktyczny</a></li>
                 <li><a href="/">Statystyka oddziału</a></li>
